Comments out garbage collector, adds PatchStar

--- a/config/example/devices.cfg
+++ b/config/example/devices.cfg
@@ -72,11 +72,29 @@ RecordingChamber:
 
 
 # Simulated micromanipulator
-Manipulator1:
-    driver: 'MockStage'
-    fastSpeed: 3*mm/s
-    slowSpeed: 100*um/s
+#Manipulator1:
+#    driver: 'MockStage'
+#    fastSpeed: 3*mm/s
+#    slowSpeed: 100*um/s
 
+PatchStar1:
+    driver: 'Scientifica'
+    port: 'com95'
+    scale: 1e-6, 1e-6, -1e-6  # convert um to m, +z points up
+    params:
+        # All parameters are optional. Some values (especially `currents` and `axisScale`
+        # depend on the type of device. For descriptions, see drivers/Scientifica/scientifica.py
+        # or the Scientifica API documentation. 
+        currents: 230, 175  # be careful to follow manufacturer specs!
+        axisScale: -6.4, -6.4, -6.4  # need negative z value to get correct approach angle
+        joyDirectionX: False
+        joyDirectionY: False
+        joyDirectionZ: False
+        minSpeed: 1000
+        accel: 500
+        joySlowScale: 4
+        joyFastScale: 80
+        joyAccel: 500
 
 # Simulated controller for regulating pipette pressure
 Pressure1:
