--- a/config/example/devices.cfg
+++ b/config/example/devices.cfg
@@ -10,7 +10,7 @@
 # many times throughout the config to refer to this device.
 DAQ:
     driver: 'NiDAQ'
-    mock: True  # this is a fake device; remove this line for real NI DAQ devices.
+    mock: False  # this is a fake device; remove this line for real NI DAQ devices.
 
     # Default mode for AI channels. Options are 'NRSE', 'RSE', and 'DIFF'
     # This may be overridden for individual channels.
@@ -24,41 +24,93 @@ DAQ:
 # A simple device connected to the DAQ that uses one AI channel and one AO 
 # channel. As with all of the following device definitions, the name 
 # 'DaqDevice' is arbitrary.
-DaqDevice:
-    driver: 'DAQGeneric'
-    channels:
-        AIChan:
-            device: 'DAQ'
-            channel: '/Dev1/ai0'
-            type: 'ai'
-        AOChan:
-            device: 'DAQ'
-            channel: '/Dev1/ao0'
-            type: 'ao'
+#DaqDevice:
+#    driver: 'DAQGeneric'
+#    channels:
+#        AIChan:
+#            device: 'DAQ'
+#            channel: '/Dev1/ai0'
+#            type: 'ai'
+#        AOChan:
+#            device: 'DAQ'
+#            channel: '/Dev1/ao0'
+#            type: 'ao'
     
 # A simulated patch-clamp amplifier. It is connected to a Hodgkin-Huxley
 # neuron model, allowing some of ACQ4's acquisition modules to be tested on
 # a "real" system.
+#Clamp1:
+#    driver: 'MockClamp'
+#    simulator: 'neuroanalysis'  # Also supports 'neuron' if you have neuron+python
+#                                # installed. See lib/devices/MockClamp/neuronSim.py,
+#                                # or 'builtin' if neither neuron nor neuroanalysis is available
+#                            
+#    # Define two connections to the DAQ:
+#    Command:
+#        device: 'DAQ'
+#        channel: '/Dev1/ao0'
+#        type: 'ao'
+#    ScaledSignal:
+#        device: 'DAQ'
+#        channel: '/Dev1/ai5'
+#        mode: 'NRSE'
+#        type: 'ai'
+#        
+#    # Default holding values.
+#    icHolding: 0.0
+#    vcHolding: -65e-3
 Clamp1:
-    driver: 'MockClamp'
-    simulator: 'neuroanalysis'  # Also supports 'neuron' if you have neuron+python
-                                # installed. See lib/devices/MockClamp/neuronSim.py,
-                                # or 'builtin' if neither neuron nor neuroanalysis is available
-                            
-    # Define two connections to the DAQ:
-    Command:
+    driver: 'MultiClamp'
+    channelID: 'model:MC700B,sn:00836613,chan:1'
+#    #dllPath: 'path/to/AxMultiClampMsg.dll' ## optional way of specifying where the dll for MultiClamp commander is located. Usually not necessary, as acq4 will search standard installation locations.
+#    #pythonExecutable: 'path/to/python/executable' ## only necessary if using MultiClampCommander v2.0.16 on a 64bit machine. Use this to specify a 32-bit python executable to use to connect to the commander.
+    commandChannel: 
         device: 'DAQ'
         channel: '/Dev1/ao0'
         type: 'ao'
-    ScaledSignal:
+    primaryChannel: 
         device: 'DAQ'
-        channel: '/Dev1/ai5'
+        channel: '/Dev1/ai10'
         mode: 'NRSE'
         type: 'ai'
-        
-    # Default holding values.
+    secondaryChannel: 
+        device: 'DAQ'
+        channel: '/Dev1/ai9'
+        mode: 'NRSE'
+        type: 'ai'
+    #vcHolding: -65e-3
+    vcHolding: 0.0
     icHolding: 0.0
-    vcHolding: -65e-3
+    defaults:   # Default amplifier state. The amplifier will be 
+                # reconfigured with these options every time ACQ4 is 
+                # started. 
+        IC:
+            HoldingEnable: False
+            Holding: 0.0
+            TestSignalEnable: False
+            #SlowCurrentInjEnable: False
+            NeutralizationEnable: True
+            #OscKillerEnable: True
+            PrimarySignalGain: 2
+            PrimarySignalLPF: 20e3
+            PrimarySignalHPF: 0
+            OutputZeroEnable: False
+            BridgeBalEnable: True
+            BridgeBalResist: 15e6
+        VC:
+            HoldingEnable: False
+            Holding: 0.0
+            TestSignalEnable: False
+            #SlowCurrentInjEnable: False
+            #NeutralizationEnable: False
+            WholeCellCompEnable: False
+            RsCompEnable: False
+            #OscKillerEnable: True
+            PrimarySignalGain: 2
+            PrimarySignalLPF: 20e3
+            PrimarySignalHPF: 0
+            OutputZeroEnable: False
+            LeakSubEnable: False
 
 
 # RecordingChamber is used to mark the position and boundaries of a recording chamber under the microscope.
@@ -77,9 +129,9 @@ RecordingChamber:
 #    fastSpeed: 3*mm/s
 #    slowSpeed: 100*um/s
 
-PatchStar1:
+PatchStar:
     driver: 'Scientifica'
-    port: 'com95'
+    name: 'PatchStar'
     scale: 1e-6, 1e-6, -1e-6  # convert um to m, +z points up
     params:
         # All parameters are optional. Some values (especially `currents` and `axisScale`
@@ -105,7 +157,7 @@ Pressure1:
 # This device tracks the position of the pipette tip and implements some motion planning
 Pipette1:
     driver: 'Pipette'
-    parentDevice: 'Manipulator1'
+    parentDevice: 'PatchStar'
     showCameraModuleUI: False
 
     # * pitch: The angle of the pipette (in degrees) relative to the horizontal plane.
@@ -149,19 +201,19 @@ PatchPipette1:
 
 
 # A simulated motorized stage.    
-Stage:
-    driver: 'MockStage'
-    scale: 1.0, 1.0, 1.0  # scale position reported by hardware to global coordinates
-    transform:
-        pos: 0, 0, 0
-        angle: 0
+#Stage:
+#    driver: 'MockStage'
+#    scale: 1.0, 1.0, 1.0  # scale position reported by hardware to global coordinates
+#    transform:
+#        pos: 0, 0, 0
+#        angle: 0
 
 
 # A microscope device, providing a way to inform ACQ4 about the set of 
 # objective lenses available and which objective is currently in use. 
 Microscope:
     driver: 'Microscope'
-    parentDevice: 'Stage'
+    #parentDevice: 'Stage'
     objectives:
         0:  # first slot always has a 5X objective
             5x_0.25NA:
@@ -177,88 +229,104 @@ Microscope:
                 scale: 1.0 / 40.0
                 offset: -43*um, 9*um
 
-
-# A simulated camera. Generates noise and calcium-indicator-like signals.
 Camera:
-    driver: 'MockCamera'
+    driver: 'MicroManagerCamera'
+    mmAdapterName: 'HamamatsuHam'
+    mmDeviceName: 'HamamatsuHam_DCAM'
     parentDevice: 'Microscope'
-    transform:                          ## transform defines the relationship between the camera's
-                                        ## sensor coordinate system (top-left is usually 0,0 and
-                                        ## pixels are 1 unit wide) and the coordinate system of its
-                                        ## scopeDevice
+    transform:
         pos: (0, 0)
-        scale: (5*2.581*um/px, -5*2.581*um/px)  # Calibrated at 2.581*um/px under 5x objective
-                                                # for this example, we have inverted the y-axis of the camera.
+        scale: (4.088 / 0.63 * um/px, -4.088 / 0.63 * um/px)
         angle: 0
 
-    exposeChannel:                                 ## Channel for recording expose signal
-        device: 'DAQ'
-        channel: '/Dev1/port0/line0'
-        type: 'di'
-    #triggerOutChannel: 'DAQ', '/Dev1/PFI5'        ## Channel the DAQ should trigger off of to sync with camera
-    triggerInChannel:                              ## Channel the DAQ should raise to trigger the camera
-        device: 'DAQ'
-        channel: '/Dev1/port0/line1'
-        type: 'do'
+    params:                             ## default parameters to apply to camera at startup
+        #TEMP_SETPOINT:  -2000
+        exposure: 10e-3
+        binning: 4,4  
+        
 
-    defaults:
-        exposure: 10*ms
+# A simulated camera. Generates noise and calcium-indicator-like signals.
+#Camera:
+#    driver: 'MockCamera'
+#    parentDevice: 'Microscope'
+#    transform:                          ## transform defines the relationship between the camera's
+#                                        ## sensor coordinate system (top-left is usually 0,0 and
+#                                        ## pixels are 1 unit wide) and the coordinate system of its
+#                                        ## scopeDevice
+#        pos: (0, 0)
+#        scale: (5*2.581*um/px, -5*2.581*um/px)  # Calibrated at 2.581*um/px under 5x objective
+#                                                # for this example, we have inverted the y-axis of the camera.
+#        angle: 0
+#
+#    exposeChannel:                                 ## Channel for recording expose signal
+#        device: 'DAQ'
+#        channel: '/Dev1/port0/line0'
+#        type: 'di'
+#    #triggerOutChannel: 'DAQ', '/Dev1/PFI5'        ## Channel the DAQ should trigger off of to sync with camera
+#    triggerInChannel:                              ## Channel the DAQ should raise to trigger the camera
+#        device: 'DAQ'
+#        channel: '/Dev1/port0/line1'
+#        type: 'do'
+#
+#    defaults:
+#        exposure: 10*ms
+  
 
 
 # A laser device. Simulating a shutter opening currently has no effect.
-Laser-UV:
-    driver: 'Laser'
-    parentDevice: 'Microscope'
-    pulseRate: 100*kHz                      ## Laser's pulse rate
-    power: 100*mW
-    shutter:
-        device: 'DAQ'
-        channel: '/Dev1/line30'           ## channel for triggering shutter
-        type: 'do'
-        delay: 10*ms                      ## how long it takes the shutter to fully open
-    wavelength: 355*nm
-    alignmentMode:
-        shutter: True
-    defaultPowerMeter: 'NewportMeter'
+#Laser-UV:
+#    driver: 'Laser'
+#    parentDevice: 'Microscope'
+#    pulseRate: 100*kHz                      ## Laser's pulse rate
+#    power: 100*mW
+#    shutter:
+#        device: 'DAQ'
+#        channel: '/Dev1/line30'           ## channel for triggering shutter
+#        type: 'do'
+#        delay: 10*ms                      ## how long it takes the shutter to fully open
+#    wavelength: 355*nm
+#    alignmentMode:
+#        shutter: True
+#    defaultPowerMeter: 'NewportMeter'
 
 
 # Galvanometric scan mirrors. Simulating motion of the mirrors currently has 
 # no effect.
-Scanner:
-    driver: 'Scanner'
-    parentDevice: 'Microscope'
-    XAxis:
-        device: 'DAQ'
-        channel: '/Dev1/ao2'
-        type: 'ao'
-    YAxis:
-        device: 'DAQ'
-        channel: '/Dev1/ao3'
-        type: 'ao'
-    defaultCamera: "Camera"
-    defaultLaser: "Laser-UV"
-    commandLimits: -1.5, 1.5
+#Scanner:
+#    driver: 'Scanner'
+#    parentDevice: 'Microscope'
+#    XAxis:
+#        device: 'DAQ'
+#        channel: '/Dev1/ao2'
+#        type: 'ao'
+#    YAxis:
+#        device: 'DAQ'
+#        channel: '/Dev1/ao3'
+#        type: 'ao'
+#    defaultCamera: "Camera"
+#    defaultLaser: "Laser-UV"
+#    commandLimits: -1.5, 1.5
 
 
 # Photomultiplier device needs nothing more than to read from a DAQ AI channel.
-PMT:
-    driver: 'DAQGeneric'
-    channels:
-        Input:
-            device: 'DAQ'
-            channel: '/Dev1/ai0'
-            type: 'ai'
+#PMT:
+#    driver: 'DAQGeneric'
+#    channels:
+#        Input:
+#            device: 'DAQ'
+#            channel: '/Dev1/ai0'
+#            type: 'ai'
 
 
 # Pockels cell is just an analog output
-PockelsCell:
-    driver: 'DAQGeneric'
-    channels:
-        Switch:
-            device: 'DAQ'
-            channel: '/Dev1/ao2'
-            type: 'ao'
-
+#PockelsCell:
+#    driver: 'DAQGeneric'
+#    channels:
+#        Switch:
+#            device: 'DAQ'
+#            channel: '/Dev1/ao2'
+#            type: 'ao'
+#
 
 ### Below are example configurations for real devices. Uncomment these and modify
 ### to your needs.
