ACQ4 control for full workbench

--- a/config/example/default.cfg
+++ b/config/example/default.cfg
@@ -51,7 +51,7 @@ modules:
 
 misc:
     ## Should camera image processing make use of CUDA-enabled gpus
-    cudaImageProcessing: True
+    cudaImageProcessing: False
 
     ## Default compression method to use when writing HDF5 data files. Examples:
     ##   'gzip'        # Widely available filter, but slow
