--- a/config/example/devices.cfg
+++ b/config/example/devices.cfg
@@ -207,13 +207,41 @@ PatchPipette1:
 #    transform:
 #        pos: 0, 0, 0
 #        angle: 0
+#FocusDrive:
+#    driver: 'm'
+#    parentDevice: 'MicroscopeStage'
+#    port: 'COM10'
+#    drive: 2
 
 
+#Stage:
+#    zStage:
+#        driver: 'MicroManagerStage'
+#        mmAdapterName: 'Prior'
+#        mmDeviceName: 'ZStage' 
+#        drive: 1
+#        zStage: 'zStage'
+#        serial:
+#            port: 'COM6'
+#            device: 'COM6'
+#            BaudRate: 9600
+#            Verbose: 1
+
+Stage:
+    driver: 'MicroManagerStage'
+    scale: -1e-6, -1e-6, 1e-6
+            
+    zStage:
+        mmAdapterName: 'Prior'
+        mmDeviceName: 'ZStage'
+        serial:
+            port: 'COM6'
+            baud: 9600
 # A microscope device, providing a way to inform ACQ4 about the set of 
 # objective lenses available and which objective is currently in use. 
 Microscope:
     driver: 'Microscope'
-    #parentDevice: 'Stage'
+    parentDevice: 'Stage'
     objectives:
         0:  # first slot always has a 5X objective
             5x_0.25NA:
