--- a/config/example/modules/Camera_ui.cfg
+++ b/config/example/modules/Camera_ui.cfg
@@ -1,5 +1,5 @@
-window: '%00%00%00%FF%00%00%00%00%FD%00%00%00%00%00%00%05j%00%00%03~%00%00%00%04%00%00%00%04%00%00%00%08%00%00%00%08%FC%00%00%00%00'
-geometry: [287, 181, 1386, 915]
+window: '%00%00%00%FF%00%00%00%00%FD%00%00%00%00%00%00%05%DF%00%00%03%C1%00%00%00%04%00%00%00%04%00%00%00%08%00%00%00%08%FC%00%00%00%00'
+geometry: [204, 162, 1503, 982]
 docks:
-    main: ('horizontal', [('horizontal', [('dock', 'Camera', {}), ('vertical', [('dock', 'View', {}), ('horizontal', [('dock', 'ROI Plot', {}), ('dock', 'Image Sequencer', {})], {'sizes': [236, 729]})], {'sizes': [765, 124]})], {'sizes': [251, 970]}), ('vertical', [('dock', 'Depth', {}), ('dock', 'Microscope', {})], {'sizes': [786, 103]})], {'sizes': [1226, 155]})
+    main: ('horizontal', [('horizontal', [('dock', 'Camera', {}), ('vertical', [('dock', 'View', {}), ('horizontal', [('dock', 'ROI Plot', {}), ('dock', 'Image Sequencer', {})], {'sizes': [256, 792]})], {'sizes': [823, 133]})], {'sizes': [272, 1053]}), ('vertical', [('dock', 'Depth', {}), ('dock', 'Microscope', {})], {'sizes': [845, 111]})], {'sizes': [1330, 168]})
     float: []
